[project]
name = "langgraph-agui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-langgraph>=0.0.22",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "grandalf>=0.8",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "uvicorn>=0.38.0",
]
